completed ticket details view

--- a/DH_BugTracker/Views/Account/ForgotPassword.cshtml
+++ b/DH_BugTracker/Views/Account/ForgotPassword.cshtml
@@ -52,7 +52,7 @@
                             Go back to
                         </span>
                         <a class="txt2 hov1">
-                            <b>@Html.ActionLink("Login", "Login")</b>
+                            <u>@Html.ActionLink("Login", "Login")</u>
                         </a>
                     </div>
 
@@ -61,7 +61,7 @@
                             Create an account?
                         </span>
                         <a class="txt2 hov1">
-                            <b>@Html.ActionLink("Sign Up", "Register")</b>
+                            <u>@Html.ActionLink("Sign Up", "Register")</u>
                         </a>
                     </div>
 
