--- a/DH_BugTracker/Views/Account/Login.cshtml
+++ b/DH_BugTracker/Views/Account/Login.cshtml
@@ -63,7 +63,7 @@
                         </span>
 
                         <a class="txt2 hov1">
-                            <b>@Html.ActionLink("Password?", "ForgotPassword")</b>
+                            <u>@Html.ActionLink("Password?", "ForgotPassword")</u>
                         </a>
                     </div>
 
@@ -73,7 +73,7 @@
                         </span>
 
                         <a class="txt2 hov1">
-                            <b>@Html.ActionLink("Sign Up", "Register")</b>
+                            <u>@Html.ActionLink("Sign Up", "Register")</u>
                         </a>
                     </div>
                 }
