--- a/DH_BugTracker/Views/Manage/EditUser.cshtml
+++ b/DH_BugTracker/Views/Manage/EditUser.cshtml
@@ -19,7 +19,7 @@
         <div class="card">
             <div class="card-header card-header-primary">
                 <h4 class="card-title">Edit Profile</h4>
-                <p class="card-category" style="padding-left:10px">Your User profile</p>
+                <p class="card-category" style="padding-left:10px">Your user profile. Demo users cannot save changes.</p>
             </div>
             <div class="card-body">
                @using (Html.BeginForm("EditUser", "Manage", FormMethod.Post, new { enctype = "Multipart/form-data" }))
