--- a/DH_BugTracker/Views/Account/Login.cshtml
+++ b/DH_BugTracker/Views/Account/Login.cshtml
@@ -54,9 +54,9 @@
                         </button>
                     </div>
                     @*<div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>*@
+                        @Html.CheckBoxFor(m => m.RememberMe)
+                        @Html.LabelFor(m => m.RememberMe)
+                    </div>*@
                     <div class="text-center p-t-45 p-b-4">
                         <span class="txt1">
                             Forgot your
@@ -76,6 +76,17 @@
                             <u>@Html.ActionLink("Sign Up", "Register")</u>
                         </a>
                     </div>
+
+                    <div class="text-center">
+                        <span class="txt1">
+                            Sign in as 
+                        </span>
+
+                        <a class="txt2 hov1">
+                            <u>@Html.ActionLink("Demo User", "Demo_Login")</u>
+                        </a>
+                    </div>
+
                 }
             </div>
         </div>
