--- a/DH_BugTracker/Views/Shared/_Layout.cshtml
+++ b/DH_BugTracker/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@
         </div>
         <div class="main-panel">
             <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg navbar-absolute fixed-top" style="background-color:white; border:1px #E5E5E5 solid;position:fixed;margin-left:259px;max-width:84%;z-index:1">
+            <nav class="navbar navbar-expand-lg navbar-absolute fixed-top" style="background-color:white; border:1px #E5E5E5 solid">@*;position:fixed;margin-left:259px;max-width:84%;z-index:1*@
                 <div class="container-fluid">
                     <div class="navbar-wrapper">
                         <span class="navbar-brand">
@@ -189,7 +189,7 @@
             </nav>
             <!-- End Navbar -->
             <div class="content">
-                <div class="container-fluid body-content" style="z-index:0 !important;padding-left:45px">
+                <div class="container-fluid body-content" style="z-index:0 !important;padding-left:30px">
                     @RenderBody()
                 </div>
             </div>
