--- a/DH_BugTracker/Views/Ticket/Details.cshtml
+++ b/DH_BugTracker/Views/Ticket/Details.cshtml
@@ -30,7 +30,7 @@
                     <div class="row">
                         <div class="col-md-5">
                             <h6>@Html.DisplayName("Assigned Developer")</h6>
-                            <a style="padding-left:5px">@Html.DisplayFor(model => model.AssignedToUser.FullName)</a>
+                            <a style="padding-left:5px">@Html.Display("DevId")</a>
                         </div>
                         <div class="col-md-6">
                             <h6>@Html.DisplayName("Submitter")</h6>
